--- a/ExpensesLogger/ExpensesLogger.csproj
+++ b/ExpensesLogger/ExpensesLogger.csproj
@@ -183,6 +183,10 @@
     <Compile Include="Migrations\201903310445149_InitialSetup.Designer.cs">
       <DependentUpon>201903310445149_InitialSetup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904070719137_AddUser.cs" />
+    <Compile Include="Migrations\201904070719137_AddUser.Designer.cs">
+      <DependentUpon>201904070719137_AddUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Expense.cs" />
@@ -248,6 +252,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\EnterExpenses.cshtml" />
+    <Content Include="Views\Home\Main.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -268,6 +274,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201903310445149_InitialSetup.resx">
       <DependentUpon>201903310445149_InitialSetup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904070719137_AddUser.resx">
+      <DependentUpon>201904070719137_AddUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
